# token-monitor

./: .gitignore  AGENTS.md  README.md  app-core.mjs  app.js  design-qa.md  index.html  package-lock.json  package.json  styles.css  vite.config.ts
.github/workflows/: quality.yml  release.yml
doc/: ROADMAP.md  V1.1.3_IMPLEMENTATION_PLAN.md  V1.2.0_IMPLEMENTATION_PLAN.md
scripts/: check-versions.mjs  codex-with-monitor.mjs  serve-monitor.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: alerts.rs  autostart.rs  coordinator.rs  lifecycle.rs  main.rs  preferences.rs  snapshot.rs  tray.rs  updater.rs
src-tauri/src/providers/: codex.rs  cursor.rs  mod.rs
tests/: app-core.test.mjs
