[package]
name = "codex-usage-monitor"
version = "1.1.1"
description = "A privacy-first desktop monitor for local Codex and Cursor usage data"
authors = ["Token Monitor"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon", "macos-private-api", "image-png"] }
tauri-plugin-autostart = "2"
tauri-plugin-window-state = "2"
